# calagopus-demo-extension

./: Metadata.toml  README.md
backend/: Cargo.toml
backend/src/: events.rs  lib.rs  settings.rs
backend/src/routes/admin/: mod.rs  settings.rs  sync.rs
frontend/: package.json
frontend/src/: ConfigurationPage.tsx  index.ts
frontend/src/api/: getSettings.ts  syncSubusers.ts  updateSettings.ts
frontend/src/lib/: schema.ts
