[package]
name = "xyz_stellarstudios_demo"
description = "This extension allows you to give server access to newly created accounts for demo panel purposes."
authors = ["Sarthak"]
version = "1.1.0"
edition = { workspace = true }

[dependencies]
shared = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
compact_str = { workspace = true }
garde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
